------------------------------------------------------------

version: 1.2.19
===========================
o [PR#43] Added ast_mapper in order to implement optimization passes.
o [PR#46,47] groupby filter support.
o [PR#48] sort filter supports reverse and attribute keyword arguments.
o [PR#49] min, max, nth support.
o [PR#50] Improved UTF8 support.

version: 1.2.18, 2018-07-24
===========================
o [PR#27] Avoid unnecessary buffer while parsing.
* [PR#32] Handle whitespace control in lexer in order to avoid a ugly hack and Pcre use.
o [PR#31] Added Tarray type.
o [PR#33] Fixed lexer line update, better error message, fail on unclosed statements.
o [PR#28] Added Tpat data structure: object base on string pattern matching.
o [PR#34] Added Tlazy constructor.
o [PR#36] Added Tvolatile contructor.
o [PR#37] Optimize some operations on strings.
* [PR#39] Fixed jg_is_true with float (used comparison with epsilon_float).
* [PR#40] Treat Tnull iterable.
o [PR#41] Added basic namespace support.
o [ISSUE#23] Added strict_mode to environment.

version: 1.2.17, 2018-07-03
===========================
o [PR#25] Add keywords 'and', 'or', 'elif'.
* [PR#26] Make the lexer reject input when a keyword is expected but not found.

version: 1.2.16, 2017-11-15
===========================
! [PR#24] Drop support for 3.x because -safe-string(compiler option) is used by default since OCaml>=4.06.0.

version: 1.2.15, 2017-07-24
===========================
* [ISSUE#23] Treat invalid iterable object as empty list.

version: 1.2.14, 2016-12-16
===========================
o Update cheatsheet.tmpl(Add more '{% block %} ~ {% endblock %}' example code).
! Use labeled arguments for Jg_stub.add_func, Jg_stub.get_func.
* Remove unused func and types.
* [PR#21] Install .cmx files.
* [PR#22] Add support for iterating over Tobj and Thash data.

version: 1.2.13, 2016-05-10
===========================
! [PR#20] Replace batteries to uutf.

version: 1.2.12, 2015-12-05
===========================