@@ -11,6 +11,7 @@ o [PR#46,47] groupby filter support.
 o [PR#48] sort filter supports reverse and attribute keyword arguments.
 o [PR#49] min, max, nth support.
 o [PR#50] Improved UTF8 support.
+o [ISSUE#52] Rename default template extension from *.tmpl to *.jingoo.
 
 version: 1.2.18, 2018-07-24
 ===========================
